# netsnap

./: .gitignore  LICENSE  README.md  adapter.py  adapter_applier.py  adapter_wmi.py  logger.py  main.py  profile_store.py  profiles_example.json  pyproject.toml
tests/: test_cmd_list.py
