[project]
name = "netsnap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.0",
    "wmi>=1.5.1",
]

[project.scripts]
netsnap = "main:main"

[tool.black]
skip-string-normalization = true

[tool.setuptools]
py-modules = ["main", "adapter_applier", "adapter_wmi", "profile_store", "logger"]
